# AgroControl

./: .gitmodules  CMakeLists.txt  README.md  dashboard_agrocontrol_v1-0.html
src/: main.c
src/include/: FreeRTOSConfig.h
